css/master.css
/* COLORS
dark blue: 020C17
blue: 021325
dark green: 00353D
mid green: 006063
light green: 018687

*/
/* PAGE SETUP
--------------------------------------------------------------------------------------*/
html, body {
  width:100%;
  min-height: 100%;
  height:100%;
  overflow: hidden;
  margin:0px;
  padding: 0px;
  font-family: Calibri, Arial, sans-serif;
  position: relative;
}

/* TEXT
--------------------------------------------------------------------------------------*/
h1 {
    font-size:38px;
    line-height: 60px;
    color: #006063;
    margin: 35px 0 10px 27px
}
h2 {
    font-size:24px;
    line-height: 25px;
    color:#018687;
    margin-bottom: 20px;
}
h3 {
    font-size:20px;
    line-height: 22px;
    color:#018687;
    margin:20px 0;
}
p {
    font-size:16px
    line-height:1.3;
}
/* LINK
--------------------------------------------------------------------------------------*/
a {
    text-decoration: none;
    color: #FFF;
}
a:hover {
    color:#00C4C4;
}

/* BUTTONS
--------------------------------------------------------------------------------------*/
a.btn, .info em{
    line-height: 33px;
    padding: 0 35px 0 15px;
    position: absolute;
    transition: all .2s ease;
    /*box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.84);*/
    display: block;
    background:#020C17;
    border-radius: 0 0 3px 3px;
}
a.btn:after{
    content:"";
    position: absolute;
    top:14px;
    right:14px;
    display:block;
    width:0;
    height: 0;
    border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-top: 7px solid #FFF;
    transition: all .2s ease;
}
a.btn.right:after {
    border-bottom: 7px solid rgba(0, 0, 0, 0);
    border-left: 7px solid #FFFFFF;
    border-top: 7px solid rgba(0, 0, 0, 0);
    right: 5px;
    top: 10px;
    transition:all 0.3s ease;
}
a.btn:hover, a.link:hover {
    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.84);
}
a.link {
  display:inline-block;
}
a.link:after {

  content:"";
    display:block;
    width:0;
    height: 0;
	float:right;
	margin:5px 0 0px 8px;
    border-top: 7px solid transparent;
	border-bottom: 7px solid transparent;
	border-left: 7px solid #FFF;
    transition: all .2s ease;
}
a.link:hover:after {
  border-left-color:#00C4C4;
}
a.link.big:after {
    border-top-width: 15px;
    border-bottom-width: 15px;
    border-left-width: 15px;
}
a.btn:hover:after {
    /*border-top: 7px solid #00C4C4;*/
}
.active a.btn:after {
    border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-bottom: 7px solid #00C4C4;
    border-top: 0px;
}
.active a.btn.right:after {
    border-left: 0px;
    border-right: 7px solid #00C4C4;
    border-bottom: 7px solid transparent;
    border-top: 7px solid transparent;
    right:15px;
}
.info {
  font-family:times;
  transition: all .2s ease;
  cursor: pointer;

}
.info:hover, info.active {
  color:#00C4C4;
  border-color:#00C4C4;
}
.info em {
  background: #020C17;
  padding:15px;
  color:#BFBDBD;
  font-family: Calibri, Arial, sans-serif;
  z-index:10;
}

/* MAP
--------------------------------------------------------------------------------------*/
div#mapWrapper  {
    width:95%;
    height:95%;
    overflow: hidden;
}
div#map {
    width:100%;
    height:100%;
    display:block;
    background:black;
    transition: height .4s ease;
}
div#map.small {
    height:50%;
    border-bottom: 2px solid #020C17;
}
div#map.activeMenu {
    width:75%;
    left:25%;
}

/* MENUE
--------------------------------------------------------------------------------------*/
nav {
    background: #020c17;
    background: -moz-linear-gradient(left,  #020c17 0%, #00353d 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#020c17), color-stop(100%,#00353d));
    background: -webkit-linear-gradient(left,  #020c17 0%,#00353d 100%);
    background: -o-linear-gradient(left,  #020c17 0%,#00353d 100%);
    background: -ms-linear-gradient(left,  #020c17 0%,#00353d 100%);
    background: linear-gradient(to right,  #020c17 0%,#00353d 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020c17', endColorstr='#00353d',GradientType=1 );


    color: #BFBDBD;
    display: block;
    height: 100%;
    left: -25%;
    position: fixed;
    transition: left 0.2s ease 0s;
    width: 25%;
    border-right:10px solid #000;
    padding: 25px;


    -moz-box-sizing:border-box;
    -webkit-box-sizing:border-box;
    -ms-box-sizing:border-box;
    -o-box-sizing:border-box;
    box-sizing:border-box;
}
nav.active {
    left:0%;
    z-index: 1;
}
nav ul {
    margin-bottom: 20px;
}
nav ul li {
    list-style: none outside none;
    opacity: 1;
}
nav.active ul li {
}
nav ul li a {
    display:block;
    line-height: 35px;
    position: relative;
    border-bottom: 2px solid #00353D;
}
nav ul li a.active {
    border-bottom:2px solid #00C4C4;
	color:#00C4C4
}
nav ul li a:after, nav ul li a:before {
    background: none repeat scroll 0 0 #FFFFFF;
    content: "";
    display: block;
    height: 2px;
    opacity: 1;
    position: absolute;
    right: 5px;
    top: 18px;
    width: 12px;
}
nav ul li a:before {
    height: 12px;
    right: 10px;
    top: 13px;
    width: 2px;
}
nav ul li a.active:before {
    opacity: 0;
}
nav a.btn {
    border-radius: 0 3px 3px 0;
    left: 100%;
    top:20px;
    z-index: 1;
}
nav.active a.btn {
    color:#00C4C4;
}


p.error {
    background: #020C17;
    color: #BFBDBD;
    cursor: pointer;
    left: 120px;
    position: absolute;
    top: -30px;
    z-index: 1;
    padding: 3px 5px;
    border:1px solid red;
    box-shadow: 0 0 4px 0px;
    text-align:center;
    width:495px;
    transition: top .8s ease;
}
.filter-error p.error {
    top: 5px;

}


/* INFO BUBBLE
--------------------------------------------------------------------------------------*/
.bubble-content {
    color:#BFBDBD;
    padding-bottom: 10px;
    position:relative;
}
.bubble-content ul {
    margin:5px 0;
}
.bubble-content ul li {
    list-style: square;
    margin-left: 15px;
}
.bubble-content ul li:first-child {
    list-style: none;
    margin-left: 0px;
}
.bubble-content a {
    bottom: 10px;
    overflow: hidden;
    position: absolute;
    right: 0;
}
/* GALLERIE
--------------------------------------------------------------------------------------*/
#image-wrapper {
    width:100%;
    height:50%;
    background: #00353d;
    border-top: 10px solid #020C17;
    transition: height .4s ease;
    /*box-shadow: 0 0 15px 3px rgba(2, 12, 23, 0.7) inset;*/
    background: -moz-linear-gradient(top,  #00353d 0%, #020c17 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00353d), color-stop(100%,#020c17));
    background: -webkit-linear-gradient(top,  #00353d 0%,#020c17 100%);
    background: -o-linear-gradient(top,  #00353d 0%,#020c17 100%);
    background: -ms-linear-gradient(top,  #00353d 0%,#020c17 100%);
    background: linear-gradient(to bottom,  #00353d 0%,#020c17 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00353d', endColorstr='#020c17',GradientType=0 );
    position: relative;
}
#image-wrapper.active {
    height:50%;
}
#image-wrapper.active a.btn {
    display: block;
}
#image-wrapper a.btn {
    display:none;
    left:46%;
    top:-3px;
}
#image-wrapper a.btn:after {
    border-top: 7px solid #FFF;
    border-bottom: 0px;
}
#image-wrapper a.btn:hover:after {
    border-top: 7px solid #00C4C4;
}
#image-wrapper ul {
    height: 150px;
    padding: 10px 0;
    width: 100%;
    margin:0 auto;
}
#image-wrapper li {
    border: 2px solid #00353D;
    border-radius: 5px;
    float: left;
    height: 150px;
    margin: 0;
    overflow: hidden;
    width: 140px;
}
#image-wrapper li:last-child {
    margin-bottom:120px;
}
#image-wrapper li a {
    display: block;
}
#image-wrapper li a img {
    width:180%;
    margin-left: -80%;
}
#image-wrapper li:hover {
    border-color: #018687;
}

/* IMAGE ZOOM
--------------------------------------------------------------------------------------*/
.zoom-wrapper {
    width:90%;
    height:90%;
    z-index: 10;
    position: absolute;
    top:5%;
    left: 5%;
    overflow: hidden;
}
.zoom-wrapper a.btn {
    opacity: 0;
    right:10px;
    top:0;
	transition: none;
}
.zoom-wrapper:hover a.btn {
    opacity: 1;
}
.img-wrapper {
    width:102%;
    height:100%;
    overflow-y: scroll;
}
.img-wrapper img {
    width:100%;
    cursor: pointer;
}
.zoom-background {
    width: 100%;
    height: 100%;
    background: #020C17;
    opacity: 0.9;
    position: absolute;
    z-index:9;
    top: 0;
    left: 0;
}

/* START ANIMATION
--------------------------------------------------------------------------------------*/
.start-animation nav a.btn {
    bottom:40px!important;
}

/* MISC
--------------------------------------------------------------------------------------*/
img#marker-image, img#marker-shadow {
    display:none;
}
.scroll-container {
    display: block;
    overflow-y: scroll;
    overflow-x: hidden;
    height:100%;
}

/* MEDIA QUERIES
--------------------------------------------------------------------------------------*/
@media screen and (max-width: 600px) {
  nav {
    width:50%;
    left:-50%;
  }
  #map.activeMenu {
    left:50%;
    width:50%;
  }

  #image-wrapper.active {
    height:70%;
  }
  div#map.small {
    height:30%;
  }

}

